# hermes

./: .dockerignore  .gitignore  CHANGELOG.md  CI_FIX_SUMMARY.md  Cargo.toml  DOCKER.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  Dockerfile.optimized  INTEGRATION.md  OPTIMIZATIONS.md  OPTIMIZATION_IMPACT.txt  P99_OPTIMIZATION_SUMMARY.md  QUICKSTART_DOCKER.md  QUICK_REFERENCE.md  QUICK_TEST.md  README.md  RUN_BENCHMARK.md  SHOWCASE.md  docker-compose.optimized.yml  docker-compose.yml  test_ci_locally.ps1  test_ci_locally.sh
.github/workflows/: ci.yml  release.yml
benches/: ring_buffer_bench.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md
examples/: battle_test.rs  benchmark_demo.rs
scripts/: docker_benchmark.ps1  docker_benchmark.sh  docker_benchmark_optimized.ps1  docker_benchmark_optimized.sh  docker_tune.sh  linux_tuning.sh  run_benchmark.ps1
src/: lib.rs  main.rs
src/core/: mmap_storage.rs  mod.rs  ring_buffer.rs
src/network/: connection.rs  mod.rs  server.rs
src/protocol/: encoder.rs  message.rs  mod.rs
tests/: live_stress_test.rs
