[package]
name = "hermes"
version = "0.1.0"
edition = "2021"
description = "Ultra Low-Latency Message Broker with Zero-Copy Architecture"
authors = ["nirvagold <farizseptian24@gmail.com>"]
license = "MIT"
repository = "https://github.com/nirvagold/hermes"
homepage = "https://github.com/nirvagold/hermes"
documentation = "https://docs.rs/hermes"
readme = "README.md"
keywords = ["message-broker", "low-latency", "hft", "zero-copy", "lock-free"]
categories = ["network-programming", "concurrency", "data-structures"]
rust-version = "1.70"

[dependencies]
memmap2 = "0.9"
mio = { version = "1.0", features = ["os-poll", "net"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "hermes_server"
path = "src/bin/hermes_server.rs"

[[bin]]
name = "hermes_subscriber"
path = "src/bin/hermes_subscriber.rs"

[[example]]
name = "battle_test"
path = "examples/battle_test.rs"

[[test]]
name = "live_stress_test"
path = "tests/live_stress_test.rs"

[[bench]]
name = "ring_buffer_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
